--- a/server/src/main/resources/password/pwm/AppProperty.properties
+++ b/server/src/main/resources/password/pwm/AppProperty.properties
@@ -258,9 +258,11 @@ otp.recoveryHash.method=SHA1
 otp.qrImage.height=200
 otp.qrImage.width=200
 otp.encryptionAlg=AES
-password.randomGenerator.maxAttempts=2000
-password.randomGenerator.maxLength=1024
-password.randomGenerator.jitter.count=50
+password.randomGenerator.maxAttempts=100000
+password.randomGenerator.maxLength=2000
+password.randomGenerator.jitter.count=10000
+password.randomGenerator.minLength=12
+password.randomGenerator.defaultStrength=50
 password.strength.threshold.veryStrong=100
 password.strength.threshold.strong=75
 password.strength.threshold.good=45
